pagina home page completa e responsiva

--- a/src/components/CardHome.css
+++ b/src/components/CardHome.css
@@ -74,3 +74,27 @@ width: 20%;
 
 
 }
+
+
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+ 
+ 
+
+}
+
+
+@media screen and (max-width: 425px) { /* Mobile */
+
+  
+
+.card{
+
+  margin-top: 250px;
+  width: 80%;
+  margin-bottom: 200px;
+}
+
+
+ }
