--- a/src/components/CardsBrowse.css
+++ b/src/components/CardsBrowse.css
@@ -2,31 +2,37 @@
 
 .cards-browse-container {
     display: flex;
-    justify-content: center;
+    
     margin-top: 5%;
-    align-items: center;
+    align-items:flex-start;
+    
   }
   
   .cards-container-browse {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 30px;
+    gap: 50px;
+    width: auto;
+    padding-bottom: 20px;
+    
      
    
   }
   
-  .card-browse-item {
-    display: flex;
-    width: 250px;
-    
-    flex-direction: column;
-    align-items:flex-start;
-    text-align: center;
-    
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-  }
+ 
+
+
+
+ .cards-browse{
+  width: 100%;
+  display: flex;
   
+    align-items: center;
+    justify-content: center;
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+ }
+ 
   .card-browse-item:hover{
     animation: shake 0.5s ;
 
@@ -39,18 +45,25 @@
     100% { transform: translate(0, 0); }
   }
 
+.card-browse-item{
+ 
+  display: flex;
+  flex-direction: column;
+  
+  align-items:center;
 
-  .card-browse-img {
-    width: 100%;
-    border-radius: 20px;
-    
-  }
+}
+.card-browse-img{
+width: 80%;
+
+}
 
   
   
 .card-browse-item h5{
    padding-top: 10%;
-    margin-left: 30px;
+    
+    
     font-family: 'Work Sans', sans-serif;
     font-size: 22px;
     padding-bottom: 10%;
@@ -59,3 +72,49 @@
 
 }
 
+
+
+
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+
+
+  
+.card-browse-img{
+  max-width: 150px;
+}
+.card-browse-item h5{
+  font-size: 16px;
+  
+}
+.card-browse-item{
+  max-width: 250px; /* Reduz a largura máxima do card para acomodar em telas menores */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+    }
+
+}
+
+
+@media screen and (max-width: 425px) { /* Mobile */
+
+  .cards-container-browse {
+   
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    
+        
+   
+  }
+  .card-browse-item h5{
+    font-size: 12px;
+    
+  }
+
+
+  
+ }
