--- a/src/components/ConteudoDiscover.css
+++ b/src/components/ConteudoDiscover.css
@@ -53,3 +53,84 @@ align-items: center;
 
 
 }
+
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+
+  .div-discover-conteudo-text p{
+
+    font-size: 16px;
+
+
+}
+.div-discover-conteudo-text h3{
+
+  font-size: 28px;
+
+
+}
+.button-discover{
+
+  padding-top: 10px;
+  
+  padding-bottom: 10px;
+
+}
+
+
+
+}
+
+
+@media screen and (max-width: 425px) { /* Mobile */
+
+
+  .div-discover-conteudo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+
+  .button-discover{
+
+    padding-top: 10px;
+    position: relative;
+    padding-left: 10px;
+    padding-right:10px ;
+margin-top: 1600px;
+    padding-bottom: 10px;
+  
+  }
+
+
+  
+ }
+
+ @media screen and (max-width: 375px) { 
+
+  .button-discover{
+
+   
+margin-top: 1480px;
+ 
+  
+  }
+
+
+}
+
+@media screen and (max-width: 320px) { 
+
+  .button-discover{
+
+   
+    margin-top: 1350px;
+     
+      
+      }
+
+
+}
