--- a/src/components/ConteudoTrending.css
+++ b/src/components/ConteudoTrending.css
@@ -32,3 +32,25 @@
     
 
 }
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+
+.div-trending-conteudo h3{
+font-size: 22px;
+
+}
+.div-trending-conteudo p{
+font-size: 16px;
+
+}
+
+
+}
+
+
+@media screen and (max-width: 425px) { /* Mobile */
+
+
+
+}
