--- a/src/components/CardsDiscover.css
+++ b/src/components/CardsDiscover.css
@@ -2,10 +2,10 @@
 .card-discover{
 margin-top: 5%;
 display: flex;
-width: 85%;
+width: 100%;
 justify-content: flex-start;
 
-gap: 60px;
+gap: 50px;
 
 }
 
@@ -18,6 +18,10 @@ gap: 60px;
     border-radius: 20px;
 
 
+}
+
+.img-principal-discover{
+    width: 100%;
 }
 
 .discover-conteudo{
@@ -62,3 +66,82 @@ justify-content: space-between;
 
 
 }
+
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+
+
+.hidden-discover3{
+
+    display: none;
+}
+
+.card-discover{
+   
+    display: flex;
+    
+    gap: 20px;
+    
+    }
+    .img-principal-discover{
+
+        width: 100%;
+    }
+
+}
+
+
+@media screen and (max-width: 425px) { /* Mobile */
+
+    .hidden-discover3{
+
+        display: block;
+    }
+    .card-discover{
+        flex-direction: column;
+
+       margin-top: -450%;
+       
+       width: 100%;
+       
+        
+        }
+
+        .img-principal-discover{
+
+            width: 100%;
+        }
+
+  
+ }
+
+ @media screen and (max-width: 375px) { 
+
+    .card-discover{
+       
+
+       margin-top: -470%;
+       
+      
+       
+        
+        }
+
+
+ }
+
+ @media screen and (max-width: 320px) { 
+
+    .card-discover{
+       
+
+        margin-top: -490%;
+        
+       
+        
+         
+         }
+
+
+ }
