--- a/src/components/ConteudoFooter.css
+++ b/src/components/ConteudoFooter.css
@@ -90,7 +90,7 @@ margin-bottom: 5%;
   }
 
   .elemento-footer3 p{
-    padding-top: 5%;
+    
     font-family: 'Work Sans', sans-serif;
     color: rgba(204, 204, 204, 1);
     font-size: 16px;
@@ -102,21 +102,22 @@ margin-bottom: 5%;
     border-radius: 15px;
     background: white;
     
-    
+    display: flex;
   }
 
   .div-footer-email-imput{
     border-radius: 20px;
-
+    width: 100%;
     background: white;
     padding: 10px;
     border: none;
+    flex: 1;
 
 
   }
   .div-footer-email-button {
     border-radius: 15px;
-    width: auto;
+   
     background: rgba(162, 89, 255, 1);
     font-family: 'Work Sans', sans-serif;
     padding: 10px 20px;
@@ -147,3 +148,52 @@ margin-bottom: 5%;
     
   }
   
+
+  @media screen and (max-width: 768px) {  /* Tablet */
+
+.container-footer{
+ display: flex;
+ flex-direction: column;
+ width: 100%;
+ 
+
+}
+.elemento-footer3{
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 100%;
+  
+
+}
+.div-footer-email{
+ width: 60%;
+
+}
+
+
+
+  }
+
+
+  @media screen and (max-width: 425px) { /* Mobile */
+
+    .div-footer-nav p{
+
+  width: 200%;
+
+    }
+
+
+
+    .div-footer-email{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: 20px;
+      padding: 0%;
+      background: transparent;
+
+    }
+
+  
+  }
