--- a/src/components/ConteudoMagic.css
+++ b/src/components/ConteudoMagic.css
@@ -45,3 +45,57 @@
 
 
 }
+
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+  
+  .magic-h3{
+    
+    font-size:  28px;
+    width: 100%;
+
+}
+div{
+width: 100%;
+
+}
+
+
+
+}
+
+
+@media screen and (max-width: 425px) { /* Mobile */
+
+  .div-magic-conteudo{
+    padding-top: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items:flex-start;
+    
+  }
+  .magic-h3{
+    
+    font-size:  28px;
+    width: 50%;
+
+}
+
+.button-magic{
+position: absolute;
+width: 80%;
+margin-top: 350px;
+}
+
+ }
+
+
+ @media screen and (max-width: 320px) {
+  .button-magic{
+   
+    margin-top: 350px;
+    }
+
+ }
