--- a/src/components/ConteudoTop.css
+++ b/src/components/ConteudoTop.css
@@ -35,13 +35,79 @@ order: 1;
 order: 2;
 display: flex;
 align-items: center;
-width: 25%;
+
 gap: 10px;
 justify-content: center;
   font-family: 'Work Sans', sans-serif;
   color: rgba(255, 255, 255, 1);
   border: 1px solid rgb(133, 128, 175);
   border-radius: 20px;
+  margin-top: 30px;
+  width: 25%;
+
+
+    }
+
+
+
+
+    @media screen and (max-width: 768px) {  /* Tablet */
+
+      .conteudotop-conteudo h3{
+
+        font-size: 28px;
+        padding-bottom: 2%;
+      }
+
+      .conteudotop-conteudo-div{
+        width: 50%;
+        font-size: 16px;
+        order: 1;
+        
+        
+            }
+
+            .conteudotop-conteudo-button{
+              margin-top: 30px;
+              width: 35%;
+              
+             
+            }
+
+    }
+    
+    
+    @media screen and (max-width: 425px) { /* Mobile */
+
+      .conteudotop-conteudo{
+
+display: block;
+flex-direction: column;
+align-items: center;
+width: 100%;
+
+      }
+      .conteudotop-conteudo h3{
+      width: 100%;
+
+      }
+  
+  
+  
+  .conteudotop-conteudo-div{
+   
+    width: 80%;
+    
+  
+      }
+
+      .conteudotop-conteudo-button{
+        margin-top: 800px;
+        width: 100%;
+        padding: 5%;
+       
+      }
+
 
 
     }
