--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -100,7 +100,7 @@ a {
     display: block;
     cursor: pointer;
     position: relative;
-    margin-left:10px;
+    margin-left:400px;
     z-index: 2;
   }
 
@@ -125,6 +125,7 @@ a {
     flex-direction: column;
     align-items:flex-end;
     list-style: none;
+    
     margin: 0;
     padding: 0;
     max-height: 0;
@@ -132,18 +133,23 @@ a {
     transition: max-height 0.3s ease;
     position: absolute;
     top: 100%;
-    left: 0;
+    
     width: 100%;
     background-color: transparent;
     padding: 10px 0;
   }
 
   .menu-items.open {
-    max-height: 200px; 
+    max-height: 300px;
+    width: 100px;
+
+    
+
   }
 
   .menu-items li {
     margin-top: 10px;
+  
     text-align: center;
   }
 
@@ -159,17 +165,15 @@ a {
 
 
 @media screen and (max-width: 425px) { /* Mobile */
-  .button-menu {
-
-    width: 100%;
-  }
-
-  .menu-toggle{
   
-    margin-right: -180%;
+
+  .menu-toggle {
+    display: block;
+    cursor: pointer;
+    position: relative;
+    margin-left:80%;
+    z-index: 2;
   }
-
-
 
 }
 
