--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -32,3 +32,18 @@ footer{
    padding-bottom: 3%;
 
 }
+
+
+
+
+@media screen and (max-width: 768px) {  /* Tablet */
+
+
+
+}
+
+
+@media screen and (max-width: 300px) { /* Mobile */
+
+  
+ }
