--- a/src/components/CardsMarketplace/CardsMarketplace.css
+++ b/src/components/CardsMarketplace/CardsMarketplace.css
@@ -1,5 +1,5 @@
 .cards {
-  width: 330px;
+  width: 30%;
   display: flex;
   flex-direction: column;
   background: #2b2b2b;
@@ -61,4 +61,16 @@
   font-size: 16px;
   color: #fff;
   font-weight: 400;
+}
+
+@media screen and (max-width:1279px) {
+  .cards {
+    width: 47%;
+  }  
+}
+
+@media screen and (max-width:833px) {
+  .cards {
+    width: 315px;
+  }  
 }
