--- a/src/components/ConteudoRankingsToday.css
+++ b/src/components/ConteudoRankingsToday.css
@@ -20,3 +20,38 @@
   color: white;
   border-bottom: 2px solid #858584;
 }
+.sec2{
+  display:none;
+}
+@media screen and (max-width: 300px) {
+.sec{
+  display: none;
+}
+.sec2{
+  display: block;
+}
+.conteudoranktoday-conteudo-div {
+  display: flex;
+  width: 100vw;
+  justify-content: space-evenly;
+  flex-direction: row;
+  gap: 30px;
+  margin-top: 100px;
+  font-size: 14px;
+}
+.rankings-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid white;
+  margin-top: 5%;
+  border-radius: 20px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  padding-left: 1%;
+  padding-right: 23%;
+  color: #858584;
+  font-family: "Space Mono", monospace;
+}
+}
