--- a/src/components/ConteudoTopRank.css
+++ b/src/components/ConteudoTopRank.css
@@ -19,3 +19,11 @@
   padding-bottom: 2%;
 }
 
+@media screen and (max-width: 768px) {
+  .conteudotop-conteudo-rank p{
+    font-size: 14px;
+  }
+  }
+  @media screen and (max-width: 300px) {
+  
+  }
